job specs api
